--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.18"
 tokio = { version = "1.28.2", features = ["full"] }
+# Serde / json
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.99"
+serde_with = "3.0.0"
+# Axum
+axum = "0.6.18"
 tower-http = { version="0.4.1", features = ["fs"] }
 tower-cookies = "0.9.0"
+# Others
+lazy-regex = "2.5.0"
+async-trait = "0.1.71"
+strum_macros = "0.25.1"
+uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
 anyhow = "1.0.71"
